fix(badge): icon color with contrast-fade (#DS-3632) (#678)

--- a/packages/components/badge/badge-tokens.scss
+++ b/packages/components/badge/badge-tokens.scss
@@ -50,7 +50,7 @@
     --kbq-badge-filled-fade-on-contrast-background: var(--kbq-background-contrast-fade);
     --kbq-badge-filled-fade-on-contrast-color: var(--kbq-foreground-contrast);
     --kbq-badge-filled-fade-on-contrast-caption: var(--kbq-foreground-contrast);
-    --kbq-badge-filled-fade-on-contrast-icon: var(--kbq-icon-contrast-fade);
+    --kbq-badge-filled-fade-on-contrast-icon: var(--kbq-icon-contrast);
     --kbq-badge-filled-fade-on-success-background: var(--kbq-background-success-fade);
     --kbq-badge-filled-fade-on-success-color: var(--kbq-foreground-success);
     --kbq-badge-filled-fade-on-success-caption: var(--kbq-foreground-success);
@@ -72,7 +72,7 @@
     --kbq-badge-outline-fade-on-contrast-color: var(--kbq-foreground-contrast);
     --kbq-badge-outline-fade-on-contrast-border: var(--kbq-line-contrast-fade);
     --kbq-badge-outline-fade-on-contrast-caption: var(--kbq-foreground-contrast);
-    --kbq-badge-outline-fade-on-contrast-icon: var(--kbq-icon-contrast-fade);
+    --kbq-badge-outline-fade-on-contrast-icon: var(--kbq-icon-contrast);
     --kbq-badge-outline-fade-on-success-background: transparent;
     --kbq-badge-outline-fade-on-success-color: var(--kbq-foreground-success);
     --kbq-badge-outline-fade-on-success-border: var(--kbq-line-success-fade);
